plugins {
    id 'java'
}

group = 'de.yoyosource'
version = '1.0-SNAPSHOT'

sourceCompatibility = 24
targetCompatibility = 24

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0'

    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'

    testImplementation 'ch.qos.logback:logback-classic:1.5.13'
}

test {
    useJUnitPlatform()
}
